third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/init/data_access.rs
use pin_init::*;

#[pin_data]
struct Foo {}

fn main() {
    let _ = pin_init!(Foo {
        _: {
            let _ = __data;
        },
    });
}
